[gd_scene load_steps=8 format=3 uid="uid://jx72y87c7ysq"]

[ext_resource type="Script" uid="uid://d0ad6bibyrsdr" path="res://Rails/rail_segment/rail_segment.gd" id="1_3o5ql"]
[ext_resource type="Material" uid="uid://dw0olshq03fku" path="res://Rails/rail_segment/material_rail_metail.material" id="2_iwxy6"]
[ext_resource type="Material" uid="uid://blhjihxmpbdy" path="res://Rails/rail_segment/rail_wood.material" id="3_iwxy6"]

[sub_resource type="Curve3D" id="Curve3D_m6w3m"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -4.7, 0, 0, -1.15, 0.1, 0, 1.15, -0.1, 0, 2.15, 0, -0.05, -0.05, 0, 1.4, 0.05, 0, -1.4, 4.6, 0.9, -2.05, 1.6, 0, 0, -1.6, 0, 0, 2.1, 0.9, -4.25, 1.35, 0, 0, -1.35, 0, 0, -1.8, 0.9, -4.2, 0, 0.15, 1.35, 0, -0.15, -1.35, -4.2, 0.25, -6.2, -0.85, 0, 0.05, 0.85, 0, -0.05, -2.05, -0.25, -8.15, 0, 0, 0, 0, 0, 0, 5.1, -0.05, -8.15),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 8

[sub_resource type="BoxMesh" id="BoxMesh_qc7oo"]
material = ExtResource("3_iwxy6")
size = Vector3(1.2, 0.05, 0.2)

[sub_resource type="MultiMesh" id="MultiMesh_3o5ql"]
transform_format = 1
instance_count = 49
mesh = SubResource("BoxMesh_qc7oo")
buffer = PackedFloat32Array(0.00860862, -0.0155995, -0.999841, -4.37424, 0, 0.999878, -0.0156001, 0.00535663, 0.999963, 0.000134295, 0.00860757, -0.00282749, 0.00845799, -0.0138055, -0.999869, -3.72145, 0, 0.999905, -0.013806, 0.0150479, 0.999964, 0.000116771, 0.00845719, -0.00840583, 0.00831532, -0.012106, -0.999892, -3.07544, 0, 0.999927, -0.0121064, 0.0235126, 0.999965, 0.000100669, 0.00831471, -0.0138318, 0.00815712, -0.0102219, -0.999914, -2.4253, 0, 0.999948, -0.0102222, 0.0308773, 0.999967, 8.33837e-05, 0.00815669, -0.0191955, 0.00797367, -0.0080367, -0.999936, -1.77546, 0, 0.999968, -0.00803695, 0.0369397, 0.999968, 6.4084e-05, 0.00797341, -0.0244478, 0.00774982, -0.00536958, -0.999956, -1.12538, 0, 0.999986, -0.00536974, 0.0414635, 0.99997, 4.16145e-05, 0.0077497, -0.0295726, 0.00746, -0.00191692, -0.99997, -0.475284, 0, 0.999998, -0.00191697, 0.0440574, 0.999972, 1.43006e-05, 0.00745999, -0.0345356, 0.0070545, 0.0029128, -0.999971, 0.17469, 0, 0.999996, 0.00291288, 0.0440725, 0.999975, -2.05489e-05, 0.00705447, -0.0392812, 0.00641547, 0.0105256, -0.999924, 0.824813, 0, 0.999945, 0.0105258, 0.0402994, 0.999979, -6.75278e-05, 0.00641512, -0.0437099, 0.00507612, 0.0264746, -0.999637, 1.46927, 0, 0.999649, 0.0264749, 0.0301461, 0.999987, -0.00013439, 0.00507434, -0.0475617, 0.0102679, 0.0658574, -0.997776, 2.12507, 0, 0.997829, 0.0658608, 0.00175921, 0.999947, -0.000676255, 0.0102456, -0.0498661, 0.204288, -0.201494, -0.957949, 2.76678, 0, 0.978587, -0.205835, 0.0394175, 0.978911, 0.0420497, 0.199914, -0.108255, 0.412453, -0.317913, -0.853706, 3.3628, 0, 0.93713, -0.348979, 0.21875, 0.910979, 0.143938, 0.386522, -0.289398, 0.636702, -0.299401, -0.710612, 3.88089, 0, 0.921545, -0.388272, 0.461574, 0.77111, 0.247214, 0.586749, -0.594524, 0.84818, -0.17001, -0.501684, 4.28981, 0, 0.947096, -0.320951, 0.70169, 0.529707, 0.272225, 0.803308, -1.03552, 0.97632, -0.0299127, -0.214254, 4.53961, 0, 0.990394, -0.138272, 0.865147, 0.216332, 0.134998, 0.966942, -1.60838, 0.998519, 0, 0.0544094, 4.60015, 0, 1, 0, 0.9, -0.0544094, 0, 0.998519, -2.25241, 0.939781, 0, 0.341777, 4.48965, 0, 1, 0, 0.9, -0.341777, 0, 0.939781, -2.8904, 0.756414, -3.89899e-07, 0.654093, 4.17966, 0, 1, 5.96091e-07, 0.9, -0.654093, -4.50892e-07, 0.756414, -3.45768, 0.491079, -5.18846e-07, 0.871115, 3.68782, 0, 1, 5.95611e-07, 0.9, -0.871115, -2.92492e-07, 0.491079, -3.87748, 0.249774, 0, 0.968304, 3.08997, 0, 1, 0, 0.9, -0.968304, 0, 0.249774, -4.12731, 0.0672266, -5.94379e-07, 0.997738, 2.45027, 0, 1, 5.95727e-07, 0.9, -0.997738, -4.00487e-08, 0.0672266, -4.23647, -0.00461055, 5.9475e-07, 0.999989, 1.80009, 0, 1, -5.94757e-07, 0.9, -0.999989, -2.74216e-09, -0.00461055, -4.24941, -0.0128879, 0, 0.999917, 1.15005, 0, 1, 0, 0.9, -0.999917, 0, -0.0128879, -4.24409, -0.0190624, 1.19297e-06, 0.999818, 0.500183, 0, 1, -1.19319e-06, 0.9, -0.999818, -2.27451e-08, -0.0190624, -4.23383, -0.0203959, -5.95968e-07, 0.999792, -0.149616, 0, 1, 5.96092e-07, 0.9, -0.999792, 1.21578e-08, -0.0203959, -4.22075, -0.0153816, 0, 0.999882, -0.799385, 0, 1, 0, 0.9, -0.999882, 0, -0.0153816, -4.20855, -0.00542063, 1.19081e-06, 0.999985, -1.44931, 0, 1, -1.19082e-06, 0.9, -0.999985, -6.45502e-09, -0.00542063, -4.20111, 0.0885861, -0.062411, 0.994111, -2.09922, 0, 0.998035, 0.0626574, 0.891876, -0.996068, -0.00555057, 0.088412, -4.21105, 0.28729, -0.160739, 0.94426, -2.73466, 0, 0.985819, 0.167814, 0.821207, -0.957843, -0.0482112, 0.283216, -4.31987, 0.53415, -0.205638, 0.819998, -3.31914, 0, 0.969964, 0.243247, 0.689175, -0.845389, -0.12993, 0.518107, -4.56672, 0.7903, -0.160229, 0.591399, -3.79502, 0, 0.965202, 0.261505, 0.522251, -0.612721, -0.206667, 0.762799, -4.97203, 0.956877, -0.0599132, 0.284249, -4.09667, 0, 0.9785, 0.206245, 0.363992, -0.290495, -0.197351, 0.936304, -5.52149, 0.999996, 0.000319669, -0.00272244, -4.19958, 0, 0.993177, 0.116619, 0.255742, 0.00274114, -0.116618, 0.993173, -6.15138, 0.938337, 0.0599248, -0.340488, -4.1081, 0, 0.984863, 0.173333, 0.165308, 0.345722, -0.162644, 0.924134, -6.7855, 0.746853, 0.134553, -0.651234, -3.79601, 0, 0.979316, 0.202339, 0.0421755, 0.664989, -0.151117, 0.731405, -7.33788, 0.511877, 0.159732, -0.844078, -3.31359, 0, 0.982561, 0.185938, -0.0869989, 0.859059, -0.0951775, 0.502951, -7.75005, 0.292648, 0.12383, -0.948168, -2.73281, 0, 0.991579, 0.1295, -0.194662, 0.95622, -0.0378978, 0.290184, -8.01791, 0.0665364, 0.0069364, -0.99776, -2.09447, 0, 0.999976, 0.0069518, -0.249368, 0.997784, -0.000462548, 0.0665347, -8.14655, 0.0112545, -0.02261, -0.999681, -1.4456, 0, 0.999744, -0.0226114, -0.240258, 0.999937, 0.000254481, 0.0112517, -8.16507, 0.0044314, -0.0258563, -0.999656, -0.800937, 0, 0.999666, -0.0258566, -0.224659, 0.99999, 0.000114581, 0.00442991, -8.17018, 0.00102254, -0.027475, -0.999622, -0.150859, 0, 0.999623, -0.027475, -0.207351, 0.999999, 2.80943e-05, 0.00102215, -8.17203, -0.00107649, -0.028479, -0.999594, 0.49876, 0, 0.999594, -0.028479, -0.189199, 0.999999, -3.06573e-05, -0.00107605, -8.17207, -0.00259426, -0.0291872, -0.999571, 1.14863, 0, 0.999574, -0.0291873, -0.170477, 0.999997, -7.57196e-05, -0.00259316, -8.17093, -0.00372956, -0.0297294, -0.999551, 1.79847, 0, 0.999558, -0.0297296, -0.151346, 0.999993, -0.000110878, -0.00372791, -8.16892, -0.00466859, -0.0301686, -0.999534, 2.4482, 0, 0.999545, -0.030169, -0.131896, 0.999989, -0.000140847, -0.00466647, -8.16624, -0.00543983, -0.030543, -0.999519, 3.09807, 0, 0.999533, -0.0305435, -0.112175, 0.999985, -0.000166152, -0.00543729, -8.16299, -0.006133, -0.0308794, -0.999504, 3.74758, 0, 0.999523, -0.03088, -0.0922331, 0.999981, -0.000189387, -0.00613007, -8.15926, -0.00682008, -0.0311993, -0.99949, 4.39195, 0, 0.999513, -0.0312, -0.072236, 0.999977, -0.000212787, -0.00681676, -8.15511)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iwxy6"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.270588)

[node name="RailSegment" type="Node3D"]
script = ExtResource("1_3o5ql")
plank_interval = 0.65

[node name="SegmentPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_m6w3m")

[node name="TrackRight" type="CSGPolygon3D" parent="SegmentPath"]
polygon = PackedVector2Array(0.51, 0.09, 0.54, 0.09, 0.57, 0.05, 0.56, 0, 0.49, 0, 0.48, 0.05)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.1
path_simplify_angle = 0.0
path_rotation = 1
path_rotation_accurate = true
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
smooth_faces = true
material = ExtResource("2_iwxy6")

[node name="TrackLeft" type="CSGPolygon3D" parent="SegmentPath"]
polygon = PackedVector2Array(-0.52, 0, -0.53, 0.05, -0.5, 0.09, -0.47, 0.09, -0.44, 0.05, -0.45, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.1
path_simplify_angle = 0.0
path_rotation = 1
path_rotation_accurate = true
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
smooth_faces = true
material = ExtResource("2_iwxy6")

[node name="TrackPlanks" type="MultiMeshInstance3D" parent="SegmentPath"]
multimesh = SubResource("MultiMesh_3o5ql")

[node name="HitBox" type="CSGPolygon3D" parent="SegmentPath"]
visible = false
polygon = PackedVector2Array(-1.2, 0.05, -1.2, 0.95, 1.2, 0.95, 1.2, 0.05)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_iwxy6")

[node name="PathFollow3D" type="PathFollow3D" parent="SegmentPath"]
transform = Transform3D(0.011174, -0.0226467, -0.99957, 0, 0.999646, -0.0226478, 0.999813, 0.000253101, 0.0111712, -1.38916, 0.261142, -8.16571)
progress = 25.748
v_offset = 0.5
rotation_mode = 2
loop = false

[node name="CSGBox3D" type="CSGBox3D" parent="SegmentPath/PathFollow3D"]

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="SegmentPath/PathFollow3D"]

[connection signal="curve_changed" from="SegmentPath" to="." method="_on_path_3d_curve_changed"]
